<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/bienvenidoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/bienvenido"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="244dp"
            android:layout_height="229dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:src="@drawable/frankentech_logo" />

        <TextView
            android:id="@+id/opcionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/seleccionar_opcion"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!--android:layout_constraintEnd_toStartOf="@id/usuariosButton"
            android:layout_constraintHorizontal_bias="0.5" -->

        <!--android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintHorizontal_bias="0.5"
            app:layout_toRightOf="@id/perfilButton"-->


        <Button
            android:id="@+id/perfilButton"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/white"
            android:text="@string/modificar_perfil"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/usuariosButton"
            android:layout_width="314dp"
            android:layout_height="68dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="40dp"
            android:layout_toRightOf="@id/perfilButton"
            android:background="@drawable/button_design"
            android:backgroundTint="#2196F3"
            android:text="@string/gestion_usuarios"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/cerrarSesionButton"
            android:layout_width="@dimen/widerecomendation"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/white"
            android:baselineAligned="false"
            android:text="@string/cerrar_sesion"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="25dp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />


    </LinearLayout>

</RelativeLayout>